[tool.poetry]
name = "databricks-helpers"
version = "0.1.0"
description = ""
authors = ["James Morrissey <Morrissey_James@bah.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
mlflow = "^2.21.2"
torch = "^2.6.0"
transformers = "^4.50.3"
datasets = "^3.5.0"
torchvision = "^0.21.0"
pyspark = "^3.5.5"
dbutils = "^3.1.0"
databricks-connect = "^16.2.2"
optuna = "^4.2.1"
ipykernel = "^6.29.5"
evaluate = "^0.4.3"
accelerate = "^1.6.0"
lightning = "^2.5.1"
torchmetrics = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
